2007-12-02  Loïc Minier  <lool@dooz.org>

	* gtk-doc.make:
	* gtk-doc.notmpl.make:
	  Add double-quotes around `which gtkdoc-rebase` to prevent "test"
	  from failing with "/bin/sh: line 11: test: !=: unary operator
	  expected ".  Fixes #501066.

2007-11-11  Stefan Kost  <ensonic@users.sf.net>

	patch by: David Nečas <yeti@physics.muni.cz>

	* gtk-doc.xsl:
	* gtkdoc-mkdb.in:
	  Avoid generated node ids. Fixes #365913.

2007-11-11  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.xsl:
	* gtkdoc-mkdb.in:
	* style.css:
	  Alternative and cleaner footer implementation (unblock #365913).

2007-11-11  Stefan Kost  <ensonic@users.sf.net>

	patch by: David Nečas <yeti@physics.muni.cz>

	* gtkdoc-mkdb.in:
	* gtkdoc-scangobj.in:
	  Display proper types for pointer properties. Fixes #468278.

2007-10-31  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  Only warn about missing deprecation guards for declared symbols.
	  Fixes #492005.

2007-10-31  Stefan Kost  <ensonic@users.sf.net>

	* tests/gtk-doc.make:
	* tests/gtkdoctest.sh:
	  Run our own check script. Clean the make output a bit.

2007-10-31  Stefan Kost  <ensonic@users.sf.net>

	* help/manual/C/gtk-doc-manual.xml:
	  Small doc fix.

2007-10-31  Stefan Kost  <ensonic@users.sf.net>

	* Makefile.am:
	  Formatting.

	* configure.in:
	* tests/gtk-doc.make:
	  Cleanup the 'make check' deps configure check.

2007-10-01  Stefan Kost  <ensonic@users.sf.net>

	* configure.in:
	* help/manual/C/gtk-doc-manual.xml:
	  Back to development.

=== Release 1.9 ===

2007-09-30  Stefan Kost  <ensonic@users.sf.net>

	* NEWS:
	  Releasing 1.9.

2007-09-27  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.make:
	* gtk-doc.notmpl.make:
	* gtkdoc-rebase.in:
	  New day, new fix. Remove testing $(DESTDIR) from makefile and use
	  Getopt::Long qw(:config gnu_getopt); in rebase.

2007-09-26  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.make:
	  And actually saving before commiting might greatly help.
