@@ -1,6 +1,7 @@
 <SECTION>
 <FILE>tester</FILE>
 <TITLE>GtkdocTester</TITLE>
+Bug446648
 bug_141869_a
 bug_141869_b
 bug_324535
