@@ -102,3 +102,10 @@ G_CONST_RETURN gchar* G_CONST_RETURN * bug_471014 (void) {
   return NULL;
 }
 
+
+/**
+ * Bug446648:
+ * @BUG_446648_FOO: foo
+ *
+ * http://bugzilla.gnome.org/show_bug.cgi?id=446648
+ **/
