@@ -1,3 +1,13 @@
+2007-12-04  Stefan Kost  <ensonic@users.sf.net>
+
+	patch by: David Nečas <yeti@physics.muni.cz>
+
+	* gtkdoc-common.pl.in:
+	* tests/bugs/docs/tester-sections.txt:
+	* tests/bugs/src/tester.c:
+	* tests/bugs/src/tester.h:
+	  Handle forward typedef'd enums. Fixes #446648.
+
 2007-12-02  Loïc Minier  <lool@dooz.org>
 
 	* gtk-doc.make:
